# TreeSerializer

./: CMakeLists.txt  README.md
docs/: Assignment test, С++.docx
docs/examples/: input.txt  output.txt
src/: CMakeLists.txt  OptionsReader.cpp  OptionsReader.h  main.cpp
src/tree/: FormatConfig.cpp  Node.cpp  TreeDrawer.cpp
src/tree/deserializers/: INodeDeserializer.h  NodeDeserializers.h  StringHelper.h  TreeDeserializer.cpp  TreeDeserializer.h
src/tree/include/: FormatConfig.h  Node.h  TreeDrawer.h
src/tree/serializers/: TreeSerializer.cpp  TreeSerializer.h
